Add kryo classes.